add popular view prototype

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <h1 class="header__logo">tonighty</h1>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">Main</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Most Popular</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Favorites</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Schedule</a></li>
           </ul>
@@ -30,10 +30,115 @@
         </button>
       </form>
     </header>
-    <main>
+    <main class="content">
+      <div class="upcoming-bar">UPCOMING TV SERIES</div>
+      <h2 class="content__heading heading-secondary">HEADER PLACEHOLDER</h2>
+      <div class="popular">
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+        <div class="popular-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
+          <h3 class="popular-item__name">Flash</h3>
+          <p class="popular-item__network">The CW</p>
+        </div>
+      </div>
+      <div class="popular__pagination">
 
+      </div>
     </main>
-  </div>
 </body>
 </html>
 
