--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Fugaz+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Tonighty</title>
 </head>
@@ -33,109 +34,109 @@
     <main class="content">
       <div class="upcoming-bar">UPCOMING TV SERIES</div>
       <h2 class="content__heading heading-secondary">HEADER PLACEHOLDER</h2>
-      <div class="popular">
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+      <div class="results">
+    <!--<div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
         </div>
-        <div class="popular-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="popular-item__img">
-          <h3 class="popular-item__name">Flash</h3>
-          <p class="popular-item__network">The CW</p>
-        </div>
+        <div class="results-item">
+          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+          <h3 class="results-item__name">Flash</h3>
+          <p class="results-item__network">The CW</p>
+        </div> -->
       </div>
-      <div class="popular__pagination">
+      <div class="results__pagination">
 
       </div>
     </main>
