remodel respond from api

--- a/src/index.html
+++ b/src/index.html
@@ -35,106 +35,12 @@
       <div class="upcoming-bar">UPCOMING TV SERIES</div>
       <h2 class="content__heading heading-secondary">HEADER PLACEHOLDER</h2>
       <div class="results">
-    <!--<div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
-          <h3 class="results-item__name">Flash</h3>
-          <p class="results-item__network">The CW</p>
-        </div>
-        <div class="results-item">
-          <img src="https://static.episodate.com/images/tv-show/thumbnail/35624.jpg" alt="" class="results-item__img">
+        <!-- <div class="results-item">
+          <img src="#" alt="" class="results-item__img">
           <h3 class="results-item__name">Flash</h3>
           <p class="results-item__network">The CW</p>
         </div> -->
+
       </div>
       <div class="results__pagination">
 
