--- a/src/index.html
+++ b/src/index.html
@@ -47,13 +47,23 @@
           </div>
         </div>
       </div> -->
-        <div class="show">
-          <div class="show__details">
+
+
+        <!-- <div class="show">
+          <div class="show__details-box">
             <img src="#" alt="#" class="show__img">
-            <p class="show__description"></p>
+            <div class="show__details">
+              <p class="show__description"></p>
+              <div class="show__info">
+                <span class="show__rating"></span>
+                <span class="show__runtime"></span>
+                <span class="show__genres"></span>
+              </div>
+            </div>
           </div>
-          <div class="show__episodes"></div>
-        </div>
+          <div class="show__episodes-box"></div>
+          <div class="show__crew-box"></div>
+        </div> -->
 
 
       <div class="results__pagination">
