create Popular model

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/png" href="/img/icons8-tv-show-64.png"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Fugaz+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&amp;subset=latin-ext" rel="stylesheet">
@@ -16,7 +17,7 @@
         <h1 class="header__logo">tonighty</h1>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">Most Popular</a></li>
+            <li class="nav__item"><a href="#" class="nav__link" data-url="populars">Most Popular</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Favorites</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Schedule</a></li>
           </ul>
