update Favorites controller

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
         <h1 class="header__logo">tonighty</h1>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link" data-url="populars">Most Popular</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Favorites</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Schedule</a></li>
+            <li class="nav__item"><a href="#populars" class="nav__link" data-url="populars">Most Popular</a></li>
+            <li class="nav__item"><a href="#favorites" class="nav__link">Favorites</a></li>
+            <li class="nav__item"><a href="#schedule" class="nav__link">Schedule</a></li>
           </ul>
         </nav>
       </div>
