--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   </header>
   <main class="content">
     <div class="wrapper">
-      <div class="upcoming-bar">UPCOMING TV SERIES</div>
+      <div class="upcoming-bar"></div>
       <h2 class="content__heading heading-secondary">HEADER PLACEHOLDER</h2>
       <div class="results">
         <!-- <div class="results-item">
@@ -67,8 +67,9 @@
         </div> -->
 
 
-      <div class="results__pagination">
+        <div class="results__pagination"></div>
 
+      </div>
     </div>
   </main>
 </body>
