--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
   <header class="header">
     <div class="wrapper">
       <div class="header-box">
-        <h1 class="header__logo">tonighty</h1>
+        <a href="/"><h1 class="header__logo">tonighty</h1></a>
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item"><a href="#populars" class="nav__link" data-url="populars">Most Popular</a></li>
-            <li class="nav__item"><a href="#favorites" class="nav__link">Favorites</a></li>
-            <li class="nav__item"><a href="#schedule" class="nav__link">Schedule</a></li>
+            <li class="nav__item"><a href="#favorites" class="nav__link">My Favorites</a></li>
+            <li class="nav__item"><a href="#schedule" class="nav__link">Upcoming Shows</a></li>
           </ul>
         </nav>
       </div>
