add toggle between episodes & casts in show view

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
               </div>
             </div>
           </div>
-          <div class="show__episodes-box"></div>
+          <div class="show__episodes"></div>
           <div class="show__crew-box"></div>
         </div> -->
 
