add more styles

--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
           <h3 class="results-item__name">Flash</h3>
           <p class="results-item__network">The CW</p>
           <div class="results-item__back">
-            <a href="" class="btn btn--info">More info</a>
-            <button class="btn btn--fav">Add to favorites</button>
+            <a href="" class="btn btn__info">More info</a>
+            <button class="btn btn__fav">Add to favorites</button>
           </div>
         </div>
       </div> -->
