--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="image/png" href="/img/icons8-tv-show-64.png"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Fugaz+One" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Tonighty</title>
 </head>
